{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 180,
  "lineage": "9745fc61-617e-2de4-dfcc-c7d191730b44",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private_instance1_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd76f917833aac4b",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-025984bc93660e446",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025984bc93660e446",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005997da71a490332",
            "private_dns": "ip-10-0-2-119.ec2.internal",
            "private_ip": "10.0.2.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ebb217ab9dc6407",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0982b60a4c83c5768",
            "tags": {
              "Name": "app-private-instance1-sub1"
            },
            "tags_all": {
              "Name": "app-private-instance1-sub1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebc30da9c9c29a3b"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private_instance1_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd76f917833aac4b",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-081636cf480968408",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081636cf480968408",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebd312ce68de1cdc",
            "private_dns": "ip-10-0-4-147.ec2.internal",
            "private_ip": "10.0.4.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f8a4952694915b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fc38c56fc6245c9",
            "tags": {
              "Name": "app-private-instance1-sub2"
            },
            "tags_all": {
              "Name": "app-private-instance1-sub2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebc30da9c9c29a3b"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private_instance2_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd76f917833aac4b",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-0e7b15b802acb9078",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7b15b802acb9078",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0875cfeb1ef5def18",
            "private_dns": "ip-10-0-2-122.ec2.internal",
            "private_ip": "10.0.2.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f912cae76a78a5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0982b60a4c83c5768",
            "tags": {
              "Name": "app-private-instance2-sub1"
            },
            "tags_all": {
              "Name": "app-private-instance2-sub1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebc30da9c9c29a3b"
            ]
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd76f917833aac4b",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-02047328ed4c28b66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02047328ed4c28b66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bff58668603d53e9",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_ip": "10.0.1.140",
            "public_ip": "3.83.36.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9abc35392862db0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07aedc0273fb0cf9b",
            "tags": {
              "Name": "bastion-1"
            },
            "tags_all": {
              "Name": "bastion-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02d7fb0a6bb22c679"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd76f917833aac4b",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-0963e2a2c364a3bac",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0963e2a2c364a3bac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e415ddbd902760d1",
            "private_dns": "ip-10-0-3-77.ec2.internal",
            "private_ip": "10.0.3.77",
            "public_ip": "54.166.7.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9bdf795c38f3ff6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e26f75287d9785e",
            "tags": {
              "Name": "bastion-2"
            },
            "tags_all": {
              "Name": "bastion-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02d7fb0a6bb22c679"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/ecbd222727684bb5",
            "arn_suffix": "app/terraform-hello-main-alb/ecbd222727684bb5",
            "dns_name": "terraform-hello-main-alb-1797053363.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/ecbd222727684bb5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-hello-main-alb",
            "security_groups": [
              "sg-03317b2a417d35f96"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07aedc0273fb0cf9b"
              },
              {
                "subnet_id": "subnet-07e26f75287d9785e"
              }
            ],
            "subnets": [
              "subnet-07aedc0273fb0cf9b",
              "subnet-07e26f75287d9785e"
            ],
            "tags": {
              "Name": "terraform-hello-main-alb"
            },
            "tags_all": {
              "Name": "terraform-hello-main-alb"
            },
            "vpc_id": "vpc-0f4ca73d535fda838",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/ecbd222727684bb5/2990fe700744c934",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/ecbd222727684bb5/2990fe700744c934",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/ecbd222727684bb5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancers.aws_lb.main",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "arn_suffix": "targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "deregistration_delay": 1800,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-hello-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4-20210712062705523300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "target_id": "i-025984bc93660e446"
          },
          "dependencies": [
            "module.instances.aws_instance.app_private_instance1_subnet1",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4-20210712062705485100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "target_id": "i-025984bc93660e446"
          },
          "dependencies": [
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_instance.app_private_instance1_subnet1",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4-20210712062705424100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/cd32cff74c9cb4e4",
            "target_id": "i-081636cf480968408"
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.private_http_ssh",
            "module.network.aws_subnet.private_subnet2",
            "module.network.aws_vpc.main",
            "module.instances.aws_instance.app_private_instance1_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03721e903ff09fcfb",
            "domain": "vpc",
            "id": "eipalloc-040f69934b5449ddf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023b487066b1d6844",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-3-215-228-240.compute-1.amazonaws.com",
            "public_ip": "3.215.228.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-ngw-eip"
            },
            "tags_all": {
              "Name": "-ngw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:internet-gateway/igw-04c5c1a9d45e0d5e4",
            "id": "igw-04c5c1a9d45e0d5e4",
            "owner_id": "549815925956",
            "tags": {
              "Name": "-igw"
            },
            "tags_all": {
              "Name": "-igw"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040f69934b5449ddf",
            "connectivity_type": "public",
            "id": "nat-0b681e49ab45094ad",
            "network_interface_id": "eni-023b487066b1d6844",
            "private_ip": "10.0.1.134",
            "public_ip": "3.215.228.240",
            "subnet_id": "subnet-07aedc0273fb0cf9b",
            "tags": {
              "Name": "-ngw"
            },
            "tags_all": {
              "Name": "-ngw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-0c531561d10d7104a",
            "id": "rtb-0c531561d10d7104a",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b681e49ab45094ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-private"
            },
            "tags_all": {
              "Name": "-private"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-0d5bf5f9f0a89c662",
            "id": "rtb-0d5bf5f9f0a89c662",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c5c1a9d45e0d5e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4af790f09eafb98",
            "route_table_id": "rtb-0c531561d10d7104a",
            "subnet_id": "subnet-0982b60a4c83c5768"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a7c03563e97e31",
            "route_table_id": "rtb-0c531561d10d7104a",
            "subnet_id": "subnet-04fc38c56fc6245c9"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet2",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4e643b22bb00a5a",
            "route_table_id": "rtb-0d5bf5f9f0a89c662",
            "subnet_id": "subnet-07aedc0273fb0cf9b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8cd4a84c086994f",
            "route_table_id": "rtb-0d5bf5f9f0a89c662",
            "subnet_id": "subnet-07e26f75287d9785e"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main",
            "module.network.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_default_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-03317b2a417d35f96",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03317b2a417d35f96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-main-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-main-sec-group"
            },
            "tags_all": {
              "Name": "alb-main-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-02d7fb0a6bb22c679",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d7fb0a6bb22c679",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03317b2a417d35f96"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "116.74.177.35/32",
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-http-ssh"
            },
            "tags_all": {
              "Name": "default-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-0ebc30da9c9c29a3b",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebc30da9c9c29a3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-http-ssh"
            },
            "tags_all": {
              "Name": "private-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-0b84cd7423e8ff620",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b84cd7423e8ff620",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sec-group"
            },
            "tags_all": {
              "Name": "rds-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0982b60a4c83c5768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0982b60a4c83c5768",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-1"
            },
            "tags_all": {
              "Name": "-private-1"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-04fc38c56fc6245c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04fc38c56fc6245c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-2"
            },
            "tags_all": {
              "Name": "-private-2"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-07aedc0273fb0cf9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07aedc0273fb0cf9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-1"
            },
            "tags_all": {
              "Name": "-public-1"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-07e26f75287d9785e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07e26f75287d9785e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-2"
            },
            "tags_all": {
              "Name": "-public-2"
            },
            "vpc_id": "vpc-0f4ca73d535fda838"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:vpc/vpc-0f4ca73d535fda838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b93d0106a3d8b8be",
            "default_route_table_id": "rtb-029276787920bcb11",
            "default_security_group_id": "sg-09f61033c7997a0bd",
            "dhcp_options_id": "dopt-ccc7f6b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f4ca73d535fda838",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-029276787920bcb11",
            "owner_id": "549815925956",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}